--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
           <img src="/image/portfolio2.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Blog</h4>
-            <p>Blog website created with HTML, CSS, and JavaScript</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <p>personal portfolio created with HTML, CSS, and JavaScript</p>
+            <a href="https://personal-portfolio-seven-fawn.vercel.app/"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
 
